add functions for adding routes
